figue/tests/integration/snapshots/main__integration__sequence__doubledash_flags_before_dd.snap
---
source: crates/figue/tests/integration/sequence.rs
expression: "strip_ansi_escapes :: strip_str(& err.to_string())"
---
Error: could not parse command-line arguments

Sources:
├─ cli --settings.*
└─ defaults

foo... true.. --foo
bar... true.. --bar
args.. ...... 

Run with --help for usage information.
Error: unknown flag: --baz. Did you mean '--bar'?
   ╭─[ <cli>:1:13 ]
   │
 1 │ --foo --bar --baz
   │             ──┬──  
   │               ╰──── unknown flag: --baz. Did you mean '--bar'?
───╯
